--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vueuse/core": "^10.11.0",
     "daisyui": "^4.12.2",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@formkit/nuxt": "^1.6.5",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@sidebase/nuxt-auth": "^0.7.2",
     "@vueuse/nuxt": "^10.10.0",
     "nuxt-icon": "^0.6.10"
   }
