--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "auth:sync": "amplify pull"
   },
   "dependencies": {
     "@aws-amplify/ui-vue": "^4.2.8",
@@ -19,6 +20,7 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@aws-amplify/cli": "^12.12.2",
     "@formkit/nuxt": "^1.6.5",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@vueuse/nuxt": "^10.10.0",
