--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^10.11.0",
     "aws-amplify": "^6.3.6",
     "daisyui": "^4.12.2",
+    "dayjs": "^1.11.11",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
