--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,30 +1,45 @@
 {
   "auth": {
-    "nuoasharingplatformd9531745": {
+    "nuoasharingplatform6b660d20": {
       "customAuth": false,
       "dependsOn": [],
-      "frontendAuthConfig": {
-        "mfaConfiguration": "OFF",
-        "mfaTypes": [
-          "SMS"
-        ],
-        "passwordProtectionSettings": {
-          "passwordPolicyCharacters": [],
-          "passwordPolicyMinLength": 8
-        },
-        "signupAttributes": [
-          "EMAIL"
-        ],
-        "socialProviders": [],
-        "usernameAttributes": [
-          "EMAIL"
-        ],
-        "verificationMechanisms": [
-          "EMAIL"
-        ]
-      },
       "providerPlugin": "awscloudformation",
-      "service": "Cognito"
+      "service": "Cognito",
+      "serviceType": "imported"
+    }
+  },
+  "parameters": {
+    "AMPLIFY_auth_nuoasharingplatform6b660d20_nativeClientId": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "nuoasharingplatform6b660d20"
+        }
+      ]
+    },
+    "AMPLIFY_auth_nuoasharingplatform6b660d20_userPoolId": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "nuoasharingplatform6b660d20"
+        }
+      ]
+    },
+    "AMPLIFY_auth_nuoasharingplatform6b660d20_userPoolName": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "nuoasharingplatform6b660d20"
+        }
+      ]
+    },
+    "AMPLIFY_auth_nuoasharingplatform6b660d20_webClientId": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "nuoasharingplatform6b660d20"
+        }
+      ]
     }
   }
 }
