--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "auth:sync": "amplify pull"
+    "auth:sync": "amplify pull",
+    "amplify": "amplify"
   },
   "dependencies": {
     "@aws-amplify/ui-vue": "^4.2.8",
@@ -16,6 +17,7 @@
     "aws-amplify": "^6.3.6",
     "daisyui": "^4.12.2",
     "dayjs": "^1.11.11",
+    "mande": "^2.0.9",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
